<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:elevation="2dp"
    android:padding="16dp"
    android:layout_marginBottom="8dp">

    <TextView
        android:id="@+id/tvCategoryName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Event_title"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvCategoryDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/Event_description_hint"
        android:textColor="#000000"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="8dp">

        <Button
            android:id="@+id/btnCatEdit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:backgroundTint="#1E88E5"
            android:text="@string/edit_button" />

        <ImageButton
            android:id="@+id/btnDelete"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/delete"
            android:scaleType="fitCenter"
            android:contentDescription="@string/delete_button"
            app:tint="@null" />
    </LinearLayout>

</LinearLayout>
